# feupy_zenodo_test_install

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/catalogs/ehwc/: eHWC_J1825-134.fits  eHWC_J1907+063.fits  eHWC_J2019+368.fits  ehwc_catalog.ecsv  make_ehwc.py  models.yaml
data/catalogs/lhaaso/: lhaaso_catalog.ecsv  make_lhaaso.py
data/catalogs/psrcat/: make_psrcat.py  psrcat_catalog.fits
data/catalogs/pulsar_spectra/: make_pulsar_spectra.py  pulsar_spectra.yaml
data/catalogs/veritas/: VER_J2016+371.fits  VER_J2018+367*.fits  VER_J2019+368.fits  VER_J2019+407.fits  VER_J2020+368*.fits  VER_J2031+415.fits  datasets.yaml  make_veritas.ipynb  models.yaml  veritas.fits
data/catalogs/vtscat/: config.py  make_veritas.py
data/catalogs/vtscat/sources/: vtscat.ecsv  vtscat_tev.fits
data/dedicated_publications/hawc/2021ApJ...907L..30A/: HAWC_J1825-134.csv  HAWC_J1825-134.fits  HAWC_J1825-138.csv  HAWC_J1825-138.fits  HAWC_J1826-128.csv  HAWC_J1826-128.fits  catalog.ecsv  make_catalog.py  models.yaml
data/dedicated_publications/hess/2019Apercent26A...621A.116H/: HESS_J1825-137.fits  catalog.ecsv  make_catalog.py  models.yaml
data/dedicated_publications/lhaaso/2024icrc.confE.643Y/: 1LHAASO_J1825-1256u.csv  1LHAASO_J1825-1256u.fits  1LHAASO_J1825-1337u.csv  1LHAASO_J1825-1337u.fits  1LHAASO_J1825-1418.csv  1LHAASO_J1825-1418.fits  catalog.ecsv  make_catalog.ipynb  make_dataset.ipynb  models.yaml
examples/: analysis_roi.ipynb  pulsar_spectra_examples.ipynb  sources.yaml  sources_class.ipynb  spectrum_analysis.ipynb
examples/aa/: sens_CTAO-South_40deg_50h_livetime50.0h.fits
examples/data/: sens_CTAO-South_40deg_50h_livetime50.0h.fits
feupy/: __init__.py
feupy/analysis/: __init__.py  config.py  core.py  irfs.py
feupy/catalog/: __init__.py  fermi.py  hawc.py  hess.py  lhaaso.py  psrcat.py  pulsar_spectra.py  utils.py  veritas.py
feupy/naima/: __init__.py  utils.py
feupy/sources/: __init__.py  sources.py
feupy/utils/: config.py  constants.py  coordinates.py  datasets.py  enum.py  geometry.py  io.py  scripts.py  stats.py  string_handling.py  table.py  types.py  units.py
feupy/visualization/: __init__.py  counts.py  roimap.py  sed.py  sensitivity.py
feupy/visualization/styles/: markers.py  mystyle.mplstyle
feupy/visualization/utils/: units.py
(+105 files in other folders)
