[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feupy"
version = "0.1.0"
description = "FeuPy — A Python application for VHE gamma-ray analysis with Gammapy, aiding γ-ray counterpart searches, spectral model fitting across wavelengths. It includes tools for Cherenkov Telescope Array Observatory (CTAO) sensitivity analysis and observation simulations, and non-thermal radiation calculations from relativistic particles. "
authors = [
    { name = "R. Jr. Costa", email = "rubensp@utfpr.edu.br" },
        { name = "R. C. Dos Anjos", email = "ritacassia@ufpr.br" }
      
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "gammapy==1.3",
    "naima>=0.10.0",
    "astropy>=6.0",
    "numpy>=1.22",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["feupy*"]

[project.urls]
Homepage = "https://github.com/rubensjrcosta/feupy"
Issues = "https://github.com/rubensjrcosta/feupy/issues"

