[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feupy"
version = "0.1.0"
description = "FeuPy: tools for VHE gamma-ray astrophysics using Gammapy, including SED modeling, CTAO simulations, and multiwavelength particle radiation utilities."
readme = "README.md"
authors = [
    { name = "R. Jr. Costa", email = "rubensp@utfpr.edu.br" },
    { name = "R. C. Dos Anjos", email = "ritacassia@ufpr.br" }
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"

dependencies = [
    "gammapy==1.3",
    "naima>=0.10.0",
    "astropy>=6.0",
    "numpy>=1.22",
    "scipy>=1.10",
    "matplotlib>=3.7",
]


[tool.setuptools.package-data]
feupy = [
    "visualization/styles/*.mplstyle",
    "data/*.ecsv",
    "data/**/*.ecsv",
    "data/**/*.fits",
    "data/**/*.txt",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["feupy*"]

[project.urls]
Homepage = "https://github.com/rubensjrcosta/feupy"
Issues = "https://github.com/rubensjrcosta/feupy/issues"
Documentation = "https://github.com/rubensjrcosta/feupy"
source = "https://github.com/rubensjrcosta/feupy"